@@ -1,3 +1,14 @@
+Jun 05, 2013: libphonenumber-5.6
+* Code changes:
+ - Fix for as-you-type-formatting bug affecting countries with no national prefix
+   formatting rule, such as China.
+* Metadata changes:
+ - New alternate formatting data for country calling code(s): 351
+ - Updated alternate formatting data for country calling code(s): 49
+ - Updated metadata for region code(s):
+   AS, BG, BH, BJ, BL, CD, CI, DE, DZ, EH, FJ, GF, GP, IN, KH, KZ, MA, MD, MF,
+   ML, MY, NG, PT, PY, TC, TJ, TT
+
 May 08, 2013: libphonenumber-5.5
 * Code changes:
  - Changed internal initialization code and made more fields final.
